--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,5 +7,5 @@
     <%= link_to t(".name_tutorial"), Settings.rails_home_link %>
     <%= t ".intro_2" %>
   </h2>
-  <%= link_to t(".signup"), "#", class: "btn btn-lg btn-primary" %>
+  <%= link_to t(".signup"), new_user_path, class: "btn btn-lg btn-primary" %>
 </div>
