--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
   <h1><%= t ".name" %></h1>
   <h2>
     <%= t ".intro_1" %>
-    <%= link_to t(".name_tutorial"), Settings.rails_home_link %>
+    <%= link_to t(".name_tutorial"), Settings.link.rails_home_link %>
     <%= t ".intro_2" %>
   </h2>
   <%= link_to t(".signup"), new_user_path, class: "btn btn-lg btn-primary" %>
