--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,11 @@
-<% if @user.errors.any? %>
+<% if object.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      The form contains <%= pluralize @user.errors.count, "error" %>.
+      <%= t ".info" %>
+      <%= pluralize error_messages.count, t(".error") %>.
     </div>
     <ul>
-    <% @user.errors.full_messages.each do |msg| %>
+    <% error_messages.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
