--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,20 @@
 <% provide :title, t(".fore_title") %>
-
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micropost_form" %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3><%= t ".micropost_feed" %></h3>
+      <%= render "shared/feed" %>
+    </div>
+  </div>
+<% else %>
 <div class="center jumbotron">
   <h1><%= t ".name" %></h1>
   <h2>
@@ -9,3 +24,4 @@
   </h2>
   <%= link_to t(".signup"), new_user_path, class: "btn btn-lg btn-primary" %>
 </div>
+<% end %>
