--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,11 @@
-<h1>User#password_reset</h1>
-
+<h1><%= t ".name" %></h1>
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
+  <%= t ".hi" %>
+  <%= @user.name %>,
 </p>
+<p><%= t ".info" %></p>
+
+<%= link_to t(".reset"), edit_password_reset_url(locale: I18n.locale, id: @user.reset_token, email: @user.email) %>
+
+<p><%= t ".info_2" %></p>
+<p><%= t ".info_3" %></p>
