--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,6 @@
-User#password_reset
+<%= t ".hi" %><%= @user.name %>,
 
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+<%= t ".info" %>
+<%= edit_password_reset_url locale: I18n.locale, id: @user.reset_token, email: @user.email %>
+<%= t ".info_2" %>
+<%= t ".info_3" %>
